# ca-image

./: CMakeLists.txt  LICENSE  README.md
include/: image.h  pal-tools.h  palette.h
src/: image.c  pal-565.c  pal-bits.c  pal-order.c  palette.c
